--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,10 @@
 /*                   Studio                */
 
+{
+  "message": "Not Found",
+  "documentation_url": "https://docs.github.com/rest"
+}
+
 /* 1Section */
 
 .main-order{
